# mmt-do-an-1-websocket-controller

./: .env.example  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  Makefile  README.md  RUN.md  build.sh  docker-compose.yml  end.cpp  end.h  keylogger.cpp  keylogger.h  list.cpp  list.h  main.cpp  package-lock.json  start.cpp  start.h  vcpkg.json
.github/workflows/: ci.yml
client/: package-lock.json  tailwind.config.js
client/src/: App.tsx  LoginPage.tsx  api.ts  auth.tsx  index.css  main.tsx  types.ts  user_db.ts  user_db_seed.json
client/src/pages/: RemoteControl.tsx
client/src/styles/: index.css
client/web/: .env  .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  webrtc.js
client/web/src/: App.tsx  LoginPage.tsx  api.ts  auth.tsx  main.tsx  types.ts  web_interface.tsx
client/web/src/components/: Header.tsx
client/web/src/pages/: RemoteControl.tsx
client/web/src/styles/: index.css
cmake/toolchains/: vcpkg_optional.cmake
db/: schema.sql
docs/: AUTH_AND_UX.md  README.md
include/api/: auth_service.hpp  db.hpp  discovery.hpp  http_server.hpp  logger.hpp  password_hash.hpp  stream_manager.hpp
include/client/: ClientCore.hpp
include/core/: command.hpp  dispatcher.hpp
include/modules/: camera.hpp  consent.hpp  process.hpp  screen.hpp  system_control.hpp
include/modules/network/: WebSocketServer.hpp
include/modules/screen/: ScreenCapturer.hpp
include/network/: ws_client.hpp  ws_server.hpp
include/server/: ServerCore.hpp
include/utils/: base64.hpp  json.hpp  limits.hpp  path_utils.hpp
scripts/: build_all.sh  deploy.sh  run-backend.ps1  setup.sh
server/: Makefile  package.json  tsconfig.json
server/config/: server.conf
server/include/core/: CommandHandler.h  Network.h  Platform.h
server/include/network/: WebSocketServer.h  web_server.h
server/migrations/: 001_init.sql
server/src/: authService.ts  config.ts  controllerManager.ts  createUser.ts  db.ts  discovery.ts  index.ts  migrate.ts  seed.ts  types-shim.d.ts  types.ts
server/src/core/: CommandHandler.cpp  Network.cpp  Platform.cpp
server/src/main/: client_main.cpp  server_main.cpp  web_main.cpp  websocket_main.cpp
server/src/network/: WebSocketServer.cpp  web_server.cpp
src/: CMakeLists.txt  codex_sandbox.cpp  main_client.cpp  main_server.cpp
src/api/: auth_service.cpp  db.cpp  discovery.cpp  http_server.cpp  logger.cpp  main.cpp  password_hash.cpp  stream_manager.cpp
src/client/: ClientCore.cpp  main.cpp
src/core/: dispatcher.cpp
src/modules/: camera.cpp  consent.cpp  process.cpp  screen.cpp  system_control.cpp
src/modules/network/: WebSocketServer.cpp
src/modules/screen/: ScreenCapturer.cpp  ScreenCapturer_Linux.cpp  ScreenCapturer_MacOS  ScreenCapturer_Windows.cpp
src/network/: ws_client.cpp  ws_server.cpp
src/server/: ServerCore.cpp  main.cpp
src/stub/: client_stub.cpp  modules_stub.cpp  network_stub.cpp  server_stub.cpp
src/utils/: base64.cpp  path_utils.cpp
tests/: CMakeLists.txt  dispatcher_tests.cpp  limits_tests.cpp  path_utils_tests.cpp  test_main.cpp  ws_smoke_test.cpp
tests/doctest/: doctest.h
